2007-10-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-item.{c,h}: Add support for the "Path" 
	  key of the .desktop entries. This makes it possible to start
	  menu items in a special working directory. Will make fixing
	  bug #3472 easier.

2007-10-20	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-monitor.c: No, let's do it 
	  differently: You can now redefine the vtable. You can also
	  clear it by passing NULL. Whenever you want to change the
	  user_data, just pass the same vtable as before.
	* libxfce4menu/xfce-menu-item-cache.c: Deactivate the cache
	  for now. Perhaps we can add it later, together with fast
	  checksum support to detect filesystem changes.
	
2007-10-20	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-monitor.c: Add vtable != NULL check
	  to xfce_menu_monitor_set_vtable. Avoids crashes when passing
	  a NULL pointer and makes other developers aware of what they
	  might be doing wrong.

2007-10-12	Jannis Pohlmann <jannis@xfce.org>

	* STATUS: Updated the status file to reflect the
	  current implementation status.

2007-09-25	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-layout.c: As a follow-up to 
	  the last commit, fix the disabled code. There is no
	  parameter named 'layout'.

2007-09-25	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-layout.c: Fix bug #3568 which
	  was caused by the layout variable not being used in
	  _set_property and _get_property. Thanks to Tomasz Mon
	  for the hint.

2007-09-20	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-monitor.c: Use g_str_hash and 
	  g_str_equal for the file/directory to monitor handle
	  hash table, rather than comparing the pointers directly.
	* libxfce4menu/xfce-menu.c: Create submenu monitors after 
	  parsing by traversing the XfceMenu tree but remove them 
	  in xfce_menu_finalize (so creating the monitors happens
	  in the root menu, removing is handled inside the 