@@ -1,3 +1,14 @@
+2007-12-23	Jannis Pohlmann <jannis@xfce.org>
+
+	* libxfce4menu/xfce-menu-item.{c,h}: Add support for "GenericName" as
+	  requested by Brian. Also add a convenience function 
+		xfce_menu_item_has_category (XfceMenuItem *, const char *).
+	* libxfce4menu/xfce-menu-item-cache.c: Re-add caching features, but now
+	  also allow the cache to be invalidated using _item_cache_invalidate().
+		This can be used in combination with file monitoring: Once something
+		has changed a) destroy the current menu, b) invalidate the cache and
+		c) create the menu again.
+
 2007-10-21	Jannis Pohlmann <jannis@xfce.org>
 
 	* libxfce4menu/xfce-menu-item.{c,h}: Add support for the "Path" 
